Added basic website

--- a/index.html
+++ b/index.html
@@ -1,13 +1,7 @@
-<!doctype html>
-<html>
-<head>
-	<meta charset="UTF-8">
-	<title>Jekyll Website</title>
-</head>
-<body>
+---
+layout: default
 
-	<h1>Home</h1>
-	<p>This is a stupid paragraph.</p>
+---
 	
-</body>
-</html>
+<h1>Home</h1>
+<p>This is a stupid paragraph.</p>
